OLMIS-2573: Added tests to popover and broke apart files

--- a/src/openlmis-table-form/table-forms.scss
+++ b/src/openlmis-table-form/table-forms.scss
@@ -21,7 +21,7 @@ that is not nessicarry.
       <th>Name</th>
       <th>Strength</th>
       <th>Unit of measure</th>
-      <th>Summary</th>
+      <th popover="Yes, nothing in this row is allowed to be valid">Summary</th>
     </tr>
   </thead>
   <tbody>
