OLMIS-2573: Added info icon back to TH element

--- a/src/openlmis-table-form/table-forms.scss
+++ b/src/openlmis-table-form/table-forms.scss
@@ -67,6 +67,18 @@ that is not nessicarry.
 Styleguide 4.5
 */
 
+th.has-popover {
+  @include icon('exclamation-circle');
+  padding-right: 2em !important;
+
+  &::before {
+    position: absolute;
+    top: 50%;
+    right: 0.5em;
+    transform: translateY(-50%);
+  }  
+}
+
 .openlmis-table > tbody > tr > td.is-invalid,
 td.is-invalid {
   @include icon('exclamation-circle');
