OLMIS-2809 Make inline forms not too long
Make sure any items in inline forms don’t take too much space. In particular, select2 dropdowns, if they have long items, should be cut off and end with an ellipsis.

--- a/src/openlmis-form/form-inline.scss
+++ b/src/openlmis-form/form-inline.scss
@@ -44,6 +44,7 @@ form.form-inline,
 		min-width: auto;
 		margin: 0px;
 		margin-left: 1em;
+		max-width: 50%;
 	}
 
 	> label {
@@ -64,6 +65,10 @@ form.form-inline,
 	> .form-group {
 		> *:last-child {
 			margin-bottom: 0em;
+		}
+
+		> .input-control {
+			width: 100%;
 		}
 	}
 }
