OLMIS-3303: Fixed styles for JS disabled

--- a/src/common/loading-view.scss
+++ b/src/common/loading-view.scss
@@ -1,9 +1,5 @@
 $loading-logo-size: 72px;
 
-body > .loading-view {
-    display: block;
-}
-
 body.no-js {
     background: radial-gradient(circle at center, $dark-gray 0%, darken($dark-gray, 8%) 100%);
     
@@ -12,7 +8,15 @@ body.no-js {
     }
 
     > .loading-view {
-        display: none !important;
+        display: block;
+    }
+
+    > noscript {
+        display: block;
+
+        > .disabled-js-view {
+            display: block;
+        }
     }
 }
 
