OLMIS-3303: Moved noscript styles to proper file

--- a/src/common/disabled-js.scss
+++ b/src/common/disabled-js.scss
@@ -1,3 +1,11 @@
+body.no-js > noscript {
+    display: block;
+
+    > .disabled-js-view {
+        display: block;
+    }
+}
+
 .disabled-js-view {
   display: none;
 
