OLMIS-3170: Fixed auto resize inputs

--- a/src/openlmis-table/tables.scss
+++ b/src/openlmis-table/tables.scss
@@ -195,8 +195,11 @@ $table-cell-padding: 0.5em !default;
 }
 
 .openlmis-table td {
-    > input[type="text"],
-    > input[type="number"] {
-        min-width: 100%;
+    > div.input-control {
+        > input[type="text"],
+        > input[type="number"] {
+            min-width: 2em;
+            width: 100%;
+        }
     }
 }
