OLMIS-3170 FEOLMIS-2016: Fixes after review

--- a/src/openlmis-table-form/table-forms.scss
+++ b/src/openlmis-table-form/table-forms.scss
@@ -136,3 +136,8 @@ td > label.checkbox {
     }
   }
 }
+
+.openlmis-table td > div.input-control > input[type="text"] {
+    min-width: 2em;
+    width: 100%;
+}
