OLMIS-3182: Made table header/foot stick to frame

--- a/src/openlmis-table/table-pane.scss
+++ b/src/openlmis-table/table-pane.scss
@@ -47,10 +47,26 @@ Styleguide 4.6
 */
 
 .openlmis-table-pane {
-  overflow: auto;
   position: relative;
-  height: 300px;
-  > table {
+
+  table {
     @extend .openlmis-table;
   }
+  
+  .scroll-area {
+    overflow: auto;
+    height: 300px;
+  }
+  
+  .faux-thead {
+    position: absolute;
+    top: 0px;
+    z-index: 10;
+  }
+  .faux-tfoot {
+    position: absolute;
+    bottom: 0px;
+    z-index: 10;
+  }
+
 }
