--- a/src/common/page-hero.scss
+++ b/src/common/page-hero.scss
@@ -13,10 +13,14 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		z-index: -1;
+		z-index: 0;
 		height: 100%;
 		width: 100%;
 		background: radial-gradient(ellipse at center -1em, $white 0%, $light-gray 70%);
+	}
+	> * {
+		position: relative;
+		z-index: 0;
 	}
 }
 
