--- a/src/openlmis-table/tables.scss
+++ b/src/openlmis-table/tables.scss
@@ -138,6 +138,12 @@ $table-cell-padding: 0.5em !default;
       border-right: $table-border;
     }
 
+    td .collapsable,
+    th .collapsable {
+      max-width: $sidebar-width;
+      white-space: normal;
+    }
+
     thead {
         th {
             color: $white;
