OLMIS-3500: Updated body height and min-height CSS properties

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -13,6 +13,8 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    height: initial;
+    min-height: 100%;
 
     > * {
         flex: 1 0 auto;
