--- a/src/openlmis-form/form.scss
+++ b/src/openlmis-form/form.scss
@@ -139,6 +139,12 @@ form {
         font-size: 1em;
         font-style: italic;
     }
+
+    label.has-popover:before {
+        font-family: FontAwesome;
+        content: "\f05a";
+        margin-right: 0.5em;
+    }
 }
 
 .form-label {
