--- a/src/openlmis-table-filter/openlmis-table-filters.scss
+++ b/src/openlmis-table-filter/openlmis-table-filters.scss
@@ -62,7 +62,10 @@ markup:
 Styleguide 2.5
 */
 
-.openlmis-table-filters .popover-content{
-    padding-right: 0.5em;
+.popover.openlmis-table-filters {
     z-index: 1030;
+
+    .popover-content{
+        padding-right: 0.5em;
+    }
 }
