OLMIS-3701 Use border-box sizing with select2 inputs

--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -108,6 +108,7 @@
         > input {
             @extend .form-control;
             width: 100%;
+            box-sizing: border-box;
         }
         &.select2-search--hide {
             display:none;
