OLMIS-3382: add yellow constant

--- a/src/common/variables.scss
+++ b/src/common/variables.scss
@@ -2,6 +2,7 @@
 $green: #356b6f !default;
 $red: #a94442 !default;
 $orange: #e67325 !default;
+$yellow: #e6ba13 !default;
 $blue: #3A95BC !default;
 $brand-blue: #49baeb !default;
 
