--- a/src/openlmis-form/select-select2.scss
+++ b/src/openlmis-form/select-select2.scss
@@ -100,6 +100,7 @@
     padding: 0.5em 0em;
 
     width: auto !important;
+    min-width: $font-size * 4;
 
     .select2-search{
         display: block;
