--- a/src/common/breadcrumbs.scss
+++ b/src/common/breadcrumbs.scss
@@ -17,7 +17,7 @@ Styleguide 2.1
 
 .breadcrumb {
 	background-color: transparent;
-	padding: 0.5em 0px;
+	padding: $space-size/4 0px;
 	margin-bottom: 0px;
 	> li + li{
 		&::before{
