--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -89,4 +89,10 @@ body {
             border-bottom: none;
         }
     }
+
+    .sidebar {
+        width: $sidebar-width;
+        float: left;
+        margin-right: 1em;
+    }
 }
