OLMIS-3876: Margin-bottom does not change other elements

--- a/src/common/layout.scss
+++ b/src/common/layout.scss
@@ -46,7 +46,7 @@ body {
 
     div[ui-view] {
         > *:not(:last-child) {
-            margin: 0 0 1em;
+            margin-bottom: 1em;
         }
 
          > h1,
